# RabbitYClust

./: .gitmodules  CMakeLists.txt  Makefile  TODO.md  main  main.cpp  readme.md
include/: cdhit-common.h  cdhit-lib.h  cdhit-utility.h
kernels/: GroupStream.cpp  GroupStream.h  merge-2sets.cpp  unionfind.cpp  unionfind.h
kernels/cluster-test/: cdhit-common.c++  cdhit-common.h  cluster.cpp
modify/: Makefile  cdhit-common.c++  cdhit-common.h  cdhit-lib.c++  cdhit-lib.h  input_sequence.h
output/: 100k_S_c.second.cluster  huge_special_r.second  nr10w_100w.second  nr_special_r.second  r_1.txt  r_1_huge.cluster.txt  r_1_huge.second.cluster.txt  r_1_huge.second.txt  r_1_huge.txt  r_2_huge.txt
python/: check.py  dump_hash.py  grouping.py  khf_grooping.py  run_cdhit.sh  superminhash.py
src/: AminoEncode.h  ConfigData.h  GroupStream.cpp  GroupStream.h  KHFMinHash.cpp  KHFMinHash.h  OrderMinHash.cpp  OrderMinHash.h  ProteinProcessor.cpp  ProteinProcessor.h  SharedData.h  \  cdhit-common.c++  cdhit-common.h  cluster.cpp  cluster.h  compare.py  compare2.py  handleSketch.cpp  handleSketch.h  input_sequence.h  int_hash.h  main.cpp  newmain.cpp  unionfind.h  util.cpp  util.h  wrong_in_cdhit.txt  wrong_in_my.txt
src/aahash/: aahash.cpp
test/output/: test_file.fa.clstr  test_vector.fa  test_vector.fa.clstr
tools/: Makefile  build_fai.cpp  read_fai.cpp
tools/build_sketch/: AminoEncode.cpp  KHFMinHash.h  Makefile  build_sketch.cpp  int_hash.h
